fix(sonar): replace generic exceptions, remove unused code, and fix stream usage
Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>